--- a/Help.html
+++ b/Help.html
@@ -11,36 +11,33 @@
 <body>
     <section class="sub-header">
         <nav>
-            <a href="About.html"><img src="Bk.jpg"></a>
+            <a href="Help.html"><img src="Bk.jpg"></a>
             <div class="navlinks" id="navlinks">
                 <i class="bi bi-x" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="Home.html">Home</a></li>
                     <li><a href="About.html">About-Us</a></li>
                     <li><a href="Templates.html">Templates</a></li>
-                    <li><a href="Home.html">Help</a></li>
+                    <li><a href="Help.html">Help</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
             <i class="bi bi-list" onclick="showMenu()"></i>
         </nav>
-        <h1>Help</h1>
+        <h1>----Help----</h1>
     </section>
 
     <section class="row">
+        <div class="HelpInp">
+            <form action="/action_page.html">
+                <label for="fname">Enter full name:</label>
+                <input type="text" id="fname" name="fname"><br><br>
+                <label for="Query">Enter your Query:</label>
+                <input type="text" id="lname" name="lname"><br><br>
+                <input type="submit" value="Submit">
+              </form>
         <div class="Help-col">
-            <h1>TO make easy and beautiful represtation with logo and templates</h1>
-            <p>
-                So, why is a logo important? Because it grabs attention, makes a 
-                strong first impression, is the foundation of your brand identity,
-                 is memorable, separates you from competition, fosters brand loyalty, and is expected by your audience
-                 A logo is a combination of text and visual imagery that serves two purposes. It tells people the name of the company and 
-                 it creates a visual symbol that represents your business. Some logos have powerful symbolic association connected to people's memory
-                </p>
-                <a href="" class="btn1 redBtn">Explore More</a>
-        </div>
-        <div class="-col">
-            <img src="about.jpg">
+            <img src="help.avif">
         </div>
     </section>
   
