--- a/Home.html
+++ b/Home.html
@@ -11,14 +11,14 @@
 <body>
     <section class="header">
         <nav>
-            <a href="PWSys.html"><img src="Bk.jpg"></a>
+            <a href="Home.html"><img src="Bk.jpg"></a>
             <div class="navlinks" id="navlinks">
                 <i class="bi bi-x" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="Home.html">Home</a></li>
                     <li><a href="About.html">About Us</a></li>
-                    <li><a href="">Templates</a></li>
-                    <li><a href="">Help</a></li>
+                    <li><a href="Templates.html">Templates</a></li>
+                    <li><a href="Help.html">Help</a></li>
                     <li><a href="">Contact</a></li>
 
                 </ul>
@@ -29,8 +29,7 @@
     <div class="textBox">
         <h1>Create Logo</h1>
         <p>
-            People always forget to water their plants. It’s one of the biggest reasons 
-            why people fail at gardening.  
+           Create better templates to have have better attraction!
            
         </p>
         <a href="" class="btn1">Visit Us To Know More</a>
