--- a/Templates.html
+++ b/Templates.html
@@ -15,10 +15,10 @@
             <div class="navlinks" id="navlinks">
                 <i class="bi bi-x" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="Home.html">Home</a></li>
                     <li><a href="About.html">About Us</a></li>
                     <li><a href="Templates.html">Templates</a></li>
-                    <li><a href="">Help</a></li>
+                    <li><a href="Help.html">Help</a></li>
                     <li><a href="">Contact</a></li>
 
                 </ul>
@@ -65,31 +65,24 @@
             </div>
         </div>
     </section>
+ <!-- --------Footer--------->
+ <section class="footer">
+    <h4>About Us</h4>
+    <p>
+        Water Treatment Technology is a high-tech enterprise specialized in 
+        various water processing devices. Aside from these individual
+        products, which cover a number of types
+        </p>
+        <div class="icons">
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-linkedin"></i>
 
-    <!-- ------Contact------------->
-    <section class="ContactUs">
-        <h1>Contact Anytime</h1>
-        <a href="" class="btn1">CONTACT US</a>
+        </div>
+</section>
 
-    </section>
-
-    <!-- --------Footer--------->
-    <section class="footer">
-        <h4>About Us</h4>
-        <p>
-            Water Treatment Technology is a high-tech enterprise specialized in 
-            various water processing devices. Aside from these individual
-            products, which cover a number of types
-            </p>
-            <div class="icons">
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-twitter"></i>
-                <i class="bi bi-linkedin"></i>
-
-            </div>
-    </section>
-
+    
 <script>
     var navlinks = document.getElementById("navlinks");
     function showMenu(){
