--- a/About.html
+++ b/About.html
@@ -24,7 +24,7 @@
             </div>
             <i class="bi bi-list" onclick="showMenu()"></i>
         </nav>
-        <h1>Help</h1>
+        <h1>About-Us</h1>
     </section>
 
     <section class="row">
@@ -39,7 +39,7 @@
                 </p>
                 <a href="" class="btn1 redBtn">Explore More</a>
         </div>
-        <div class="-col">
+        <div class="about-col">
             <img src="about.jpg">
         </div>
     </section>
