--- a/Templates.html
+++ b/Templates.html
@@ -18,6 +18,7 @@
                     <li><a href="Home.html">Home</a></li>
                     <li><a href="About.html">About Us</a></li>
                     <li><a href="Templates.html">Templates</a></li>
+                    <li><a href="editor.html">Editor</a></li>
                     <li><a href="Help.html">Help</a></li>
                     <li><a href="">Contact</a></li>
 
@@ -28,7 +29,7 @@
 
     <div class="textBox">
         <h1>Templates Samples</h1>
-        <a href="" class="btn1">Visit Us To Know More</a>
+        <a href="EditorTemplate.html" class="btn1">Edit Template</a>
     </div>
     </section>
     
@@ -70,13 +71,13 @@
         
         <div class="row">
             <div class="Templates-Col">
-                <img src="Temp.jpg">
+                <img src="temp4.jpg">
                 <div class="layer">
                     <h3>Looking for this?</h3>
                 </div>
             </div>
             <div class="Templates-Col" >
-                <img src="Temp.jpg">
+                <img src="temp5.jpg">
                 <div class="layer">
                     <h3>Looking for this?</h3>
                 </div>
