--- a/About.html
+++ b/About.html
@@ -18,6 +18,7 @@
                     <li><a href="Home.html">Home</a></li>
                     <li><a href="About.html">About-Us</a></li>
                     <li><a href="Templates.html">Templates</a></li>
+                    <li><a href="editor.html">Editor</a></li>
                     <li><a href="Home.html">Help</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
